--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,12 @@
+January 7th, 2023
+
+• Gender calculation for Pokémon.
+• Fixed small issue with Lead Pokémon rendering.
+• Started working on starter selection.
+• Added support for notification tracking.
+• Notification added for when an egg is ready to hatch.
+• Added in support for a Toast (Notification) System.
+
 December 20th, 2022
 
 • You can now make a Pokémon your Lead Pokémon from the Party and the Pokémon Box.
