create 5 files and update 27 files

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,13 @@
+January 25th, 2023
+
+• Pokémon tooltips now show withing Pokémon Box.
+• Notification added for when you obtain an item.
+• Fixed syncing issues with eggs/buffs when auto saving occurs as well as manually saving.
+• Notification for when a save happens when auto saving occurs or saving the game through the Menu.
+• Added "World Map" to Navigation.
+• Added more data (Location data).
+• Added more data (Region data).
+
 January 22nd, 2023
 
 • You can now double-click on a Pokémon in the Starter Selection to confirm it (no longer need to scroll down to the Select button).
